- Fix autoSwitch arrow crash bug introduced with Item.pm.
- Automatically remove perfectly hidden objects, caused auto-ban.
- Detect NPC spawning. (possibly picking up weird stuff now)
- Don't storage pets if they are in use.
- Show full class name in the pl # command.
- 'as' command works now when attacking players.
- "attack" ai_seq will be dequeued when a targeted player dies.

New features:
- Console::Unix interface no longer has "Press ENTER to continue"
  prompt, since UNIX terminals generally don't close when openkore exits.
- Your level/job level is now displayed when you level up.
- Player names are now cached, so that they don't have to be re-retrieved
  as often. This can save a lot of bandwidth, especially when you're
  walking in town.
- When teleportAuto_useSkill > 0, always cast Teleport skill if we are
  trying to respawn to saveMap (lets us auto-detect it).
- Support for baby classes! Kore will now be able to identify these
  classes correctly.
- You must specify target_dead 1 to use a skill on a dead person.
  This will prevent any problems where the bot keeps trying to use a skill
  like Heal or Blessing on someone who is dead.
- You can now attack looters even if the are normally ignored
  set attackLooters to 1 in config.txt
- 'cart add' and 'cart get' commands now accept names.
- 'eq slots' displays list of slotnames
  'eq slotname item' will try to equip item in slotname
- Fractional weight in inventory is now displayed.
- Show proper SP for all skills (auto-detected).
- Improved storage list, sorts the items by category like the real client.
- Emotion command now uses the real commands from the RO client.
  Example: e thx
- _whenWater should work now?

New commands:
- getplayerinfo (number)
  Ask the server for the name of the object with that ID. You will not
  see the reply unless you have debug level 2.
- storage addfromcart <cart_item> [<amount>]
  storage gettocart <storage_item> [<amount>]